layout issues (Issue #673)

--- a/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme-chronicle.css
+++ b/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme-chronicle.css
@@ -298,8 +298,13 @@
 	padding-bottom: 5px;
 }
 
-.imixs-workitem-chronicle .entry.history td {
-	padding-bottom: 0px;
+.imixs-workitem-chronicle .entry.history td, 
+.imixs-workitem-chronicle .entry.reference td, 
+.imixs-workitem-chronicle .entry.comment td, 
+.imixs-workitem-chronicle .entry.files td {
+	padding: 5px 0px;
+	display: flex;
+	gap: 10px;
 }
 
 .imixs-workitem-chronicle table tr.year td {
